--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         <img src="images/map-navigation-mod.jpg" alt="Map Navigation Mod">
         <h3>Map Navigation Mod</h3>
         <p>All Routes Unlocked</p>
-        <a href="https://www.lkcinema.com/map-navigation-mod"><button class="download-btn">Download</button></a>
+        <a href="https://www.lkcinema.com"><button class="download-btn">Download</button></a>
     </div>
 </section>
 
