--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     <div class="app-card" data-name="Video Streaming Mod">
         <h3>Video Streaming Mod</h3>
         <p>Unlocked Premium Features</p>
-        <a href="#"><button class="download-btn">Download</button></a>
+        <a href="video-streaming-mod.html"><button class="download-btn">Download</button></a>
     </div>
     <div class="app-card" data-name="Music Player Mod">
         <h3>Music Player Mod</h3>
