--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@
         font-weight: bold;
     }
 </style>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9830717699605800"
+     crossorigin="anonymous"></script>
 </head>
 <body>
     <header class="header">
