--- a/video-streaming-mod.html
+++ b/video-streaming-mod.html
@@ -71,6 +71,8 @@
             z-index: -1;
         }
     </style>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9830717699605800"
+     crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="logo">ModVerse</div>
