--- a/video-streaming-mod.html
+++ b/video-streaming-mod.html
@@ -118,6 +118,16 @@
     
     animate();
 </script>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9830717699605800"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-5o+ba-4u+5f+qz"
+     data-ad-client="ca-pub-9830717699605800"
+     data-ad-slot="5945902762"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </body>
 </html>
