--- a/index.html
+++ b/index.html
@@ -104,6 +104,9 @@
 </style>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9830717699605800"
      crossorigin="anonymous"></script>
+    <script async custom-element="amp-auto-ads"
+        src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
+    </script>
 </head>
 <body>
     <header class="header">
@@ -176,6 +179,8 @@
     
     animate();
 </script>
-
+<amp-auto-ads type="adsense"
+        data-ad-client="ca-pub-9830717699605800">
+</amp-auto-ads>
 </body>
 </html>
