--- a/index.html
+++ b/index.html
@@ -113,6 +113,19 @@
         <div class="logo">ModVerse</div>
         <input type="text" class="search-box" placeholder="Search apps..." id="searchInput">
     </header>
+    <div class="ad-container">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9830717699605800"
+        crossorigin="anonymous"></script>
+    <ins class="adsbygoogle"
+        style="display:block"
+        data-ad-client="ca-pub-9830717699605800"
+        data-ad-slot="8523130496"
+        data-ad-format="auto"
+        data-full-width-responsive="true"></ins>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+    </div>
     <canvas id="bgCanvas"></canvas>
     <section class="hero" id="home">
         <h1>Premium Modded Apps</h1>
@@ -128,6 +141,19 @@
         <p>Ad-Free & High Quality</p>
         <a href="#"><button class="download-btn">Download</button></a>
     </div>
+        <div class="ad-container">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9830717699605800"
+        crossorigin="anonymous"></script>
+    <ins class="adsbygoogle"
+        style="display:block"
+        data-ad-client="ca-pub-9830717699605800"
+        data-ad-slot="8523130496"
+        data-ad-format="auto"
+        data-full-width-responsive="true"></ins>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+        </div>
     <div class="app-card" data-name="Photo Editor Mod">
         <h3>Photo Editor Mod</h3>
         <p>All Pro Features Unlocked</p>
@@ -182,5 +208,20 @@
 <amp-auto-ads type="adsense"
         data-ad-client="ca-pub-9830717699605800">
 </amp-auto-ads>
+    <footer>
+    <div class="ad-container">
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9830717699605800"
+            crossorigin="anonymous"></script>
+        <ins class="adsbygoogle"
+            style="display:block"
+            data-ad-client="ca-pub-9830717699605800"
+            data-ad-slot="8523130496"
+            data-ad-format="auto"
+            data-full-width-responsive="true"></ins>
+        <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
+    </div>
+    </footer>
 </body>
 </html>
