--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
     <script async custom-element="amp-auto-ads"
         src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
     </script>
+    <meta name="google-adsense-account" content="ca-pub-9830717699605800">
 </head>
 <body>
     <header class="header">
