--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html><html lang="en">
 <head>
+    <meta name="description" content="ModVerse - Download premium modded apps with unlocked features, ad-free experiences, and more.">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <title>ModVerse - Premium Modded Apps</title>
     <style>
         :root {
@@ -108,8 +110,7 @@
         <div class="logo">ModVerse</div>
         <input type="text" class="search-box" placeholder="Search apps..." id="searchInput">
     </header>
-
-    </div>
+    
     <canvas id="bgCanvas"></canvas>
     <section class="hero" id="home">
         <h1>Premium Modded Apps</h1>
@@ -177,5 +178,8 @@
     
     animate();
 </script>
+    <footer style="text-align: center; padding: 1rem; color: var(--light);">
+    <p>&copy; 2025 ModVerse. All rights reserved.</p>
+    </footer>
 </body>
 </html>
