--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta name="description" content="ModVerse - Download premium modded apps with unlocked features, ad-free experiences, and more.">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.png" type="image/x-icon">
     <title>ModVerse - Premium Modded Apps</title>
     <style>
         :root {
