--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
     <meta name="description" content="ModVerse - Download premium modded apps with unlocked features, ad-free experiences, and more.">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="favicon.png" type="image/x-icon">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
     <title>ModVerse - Premium Modded Apps</title>
     <style>
         :root {
