--- a/index.html
+++ b/index.html
@@ -119,10 +119,11 @@
         <h1>Premium Modded Apps</h1>
         <p>Unlocked Features • Ad-Free • Premium Content</p>
     </section><section class="app-grid" id="apps">
-    <div class="app-card" data-name="Video Streaming Mod">
-        <h3>Video Streaming Mod</h3>
+    <div class="app-card" data-name="JioHotstar APK 25.01.27.1">
+        <img src="images/jio-hotstar.jpg" alt="Map Navigation Mod">
+        <h3>JioHotstar APK 25.01.27.1</h3>
         <p>Unlocked Premium Features</p>
-        <a href="video-streaming-mod.html"><button class="download-btn">Download</button></a>
+        <a href="jio-hotstar.html"><button class="download-btn">Download</button></a>
     </div>
     <div class="app-card" data-name="Music Player Mod">
         <h3>Music Player Mod</h3>
