--- a/jio-hotstar.html
+++ b/jio-hotstar.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Download - App Name</title>
+    <title>JioHotstar APK 25.01.27.1</title>
     <style>
         :root {
             --primary: #6c5ce7;
@@ -79,8 +79,8 @@
     <canvas id="bgCanvas"></canvas>
     <div class="container">
         <div class="app-title">
-    <img src="mod-apk-logo.png" alt="Mod APK Logo" class="title-logo">
-    <h1>Download App Name</h1>
+    <img src="jio-hotstar.jpg" alt="Mod APK Logo" class="title-logo">
+    <h1>JioHotstar APK 25.01.27.1</h1>
 </div>
         <p>Enjoy the premium unlocked features of this app.</p>
         <a href="#" class="download-btn">Download Now</a>
