--- a/jio-hotstar.html
+++ b/jio-hotstar.html
@@ -79,7 +79,7 @@
     <canvas id="bgCanvas"></canvas>
     <div class="container">
         <div class="app-title">
-    <img src="jio-hotstar.jpg" alt="Mod APK Logo" class="title-logo">
+    <img src="images/jio-hotstar.jpg" alt="Mod APK Logo" class="title-logo">
     <h1>JioHotstar APK 25.01.27.1</h1>
 </div>
         <p>Enjoy the premium unlocked features of this app.</p>
