--- a/jio-hotstar.html
+++ b/jio-hotstar.html
@@ -83,7 +83,7 @@
     <h1>JioHotstar APK 25.01.27.1</h1>
 </div>
         <p>Enjoy the premium unlocked features of this app.</p>
-        <a href="jio-hotstar.apk" class="download-btn">Download Now</a>
+        <a href="images/jio-hotstar.apk" class="download-btn">Download Now</a>
         <a href="index.html" class="back-link">Back to Homepage</a>
     </div><script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
 <script>
