--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
         <h1>Premium Modded Apps</h1>
         <p>Unlocked Features • Ad-Free • Premium Content</p>
     </section><section class="app-grid" id="apps">
-    <div class="app-card" data-name="JioHotstar APK 25.01.27.1">
+    <div class="app-card" data-name="JioHotstar mod">
         <img src="images/jio-hotstar.jpg" alt="Map Navigation Mod">
-        <h3>JioHotstar APK 25.01.27.1</h3>
+        <h3>JioHotstar mod</h3>
         <p>Unlocked Premium Features</p>
         <a href="jio-hotstar.html"><button class="download-btn">Download</button></a>
     </div>
