--- a/jio-hotstar.html
+++ b/jio-hotstar.html
@@ -129,5 +129,8 @@
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
+    <footer style="text-align: center; padding: 1rem; color: var(--light);">
+    <p>&copy; 2025 ModVerse. All rights reserved.</p>
+    </footer>
 </body>
 </html>
