--- a/netflix.html
+++ b/netflix.html
@@ -56,5 +56,8 @@
         <h1>Static Background</h1>
         <p>This background is now static, without live animations.</p>
     </div>
+    <footer style="text-align: center; padding: 1rem; color: var(--light);">
+    <p>&copy; 2025 ModVerse. All rights reserved.</p>
+    </footer>
 </body>
 </html>
