--- a/index.html
+++ b/index.html
@@ -120,15 +120,16 @@
         <p>Unlocked Features • Ad-Free • Premium Content</p>
     </section><section class="app-grid" id="apps">
     <div class="app-card" data-name="JioHotstar mod">
-        <img src="images/jio-hotstar.jpg" alt="Map Navigation Mod">
+        <img src="images/jio-hotstar.jpg" alt="jio-hotstar-mod">
         <h3>JioHotstar mod</h3>
         <p>Unlocked Premium Features</p>
         <a href="jio-hotstar.html"><button class="download-btn">Download</button></a>
     </div>
-    <div class="app-card" data-name="Music Player Mod">
-        <h3>Music Player Mod</h3>
-        <p>Ad-Free & High Quality</p>
-        <a href="#"><button class="download-btn">Download</button></a>
+    <div class="app-card" data-name="Netflix Mod">
+        <img src="images/netflix.jpg" alt="Netflix mod">
+        <h3>Netflix Mod</h3>
+        <p>Ad-Free & Premium Unlocked</p>
+        <a href="netflix.html"><button class="download-btn">Download</button></a>
     </div>
         
     <div class="app-card" data-name="Photo Editor Mod">
