--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         <img src="images/netflix.jpg" alt="Netflix mod">
         <h3>Netflix Mod</h3>
         <p>Ad-Free & Premium Unlocked</p>
-        <a href="netflix.html"><button class="download-btn">Download</button></a>
+        <a href="netflix-mod.html"><button class="download-btn">Download</button></a>
     </div>
         
     <div class="app-card" data-name="Photo Editor Mod">
