--- a/jio-hotstar.html
+++ b/jio-hotstar.html
@@ -73,6 +73,8 @@
     </style>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9830717699605800"
      crossorigin="anonymous"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9830717699605800"
+     crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="logo">ModVerse</div>
