--- a/netflix-mod.html
+++ b/netflix-mod.html
@@ -57,7 +57,7 @@
     <div class="container">
         </section><section class="app-grid" id="apps">
     <div class="app-card" data-name="Netflix Mod">
-        <img src="images/netflix-mod.jpg" alt="Netflix Mod">
+        <img src="images/netflix.jpg" alt="Netflix Mod">
         
         <h3>Netflix Mod</h3>
         <p>Removed ads/Unlocked Premium Features</p>
