--- a/jio-hotstar.html
+++ b/jio-hotstar.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html><html lang="en">
 <head>
+    <meta name="google-adsense-account" content="ca-pub-9830717699605800">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JioHotstar APK 25.01.27.1</title>
