--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html><html lang="en">
 <head>
+    <meta name="google-adsense-account" content="ca-pub-9830717699605800">
     <meta name="description" content="ModVerse - Download premium modded apps with unlocked features, ad-free experiences, and more.">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
