--- a/index.html
+++ b/index.html
@@ -198,6 +198,7 @@
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
+    <a href="https://www.modverse.online/testad.html/"><button class="download-btn">Download</button></a>
     <footer style="text-align: center; padding: 1rem; color: var(--light);">
     <p>&copy; 2025 ModVerse. All rights reserved.</p>
     </footer>
