--- a/jio-hotstar.html
+++ b/jio-hotstar.html
@@ -85,7 +85,7 @@
     <img src="images/jio-hotstar.jpg" alt="Mod APK Logo" class="title-logo">
     <h1>JioHotstar APK 25.01.27.1</h1>
 </div>
-        <p>Enjoy the premium unlocked features of this app.</p>
+        <p>Premium Unlocked /Ad free</p>
         <a href="https://drive.google.com/file/d/10jzmQJuKyP9oh8bCkm4OLXzAb18BaEBy/view" class="download-btn">Download Now</a>
         <a href="index.html" class="back-link">Back to Homepage</a>
     </div><script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
