--- a/jio-hotstar.html
+++ b/jio-hotstar.html
@@ -144,6 +144,7 @@
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
+    <h5>class="bottom-text">This websit</h5>
     <footer style="text-align: center; padding: 1rem; color: var(--light);">
     <p>&copy; 2025 ModVerse. All rights reserved.</p>
     </footer>
