--- a/jio-hotstar.html
+++ b/jio-hotstar.html
@@ -121,6 +121,8 @@
     
     animate();
 </script>
+    <h3>Information of JioHotstar Mod APK</h3>
+    <h4>App Name</h4><p>JioHotstar Mod APK</p>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9830717699605800"
      crossorigin="anonymous"></script>
 <ins class="adsbygoogle"
