--- a/jio-hotstar.html
+++ b/jio-hotstar.html
@@ -122,7 +122,30 @@
     animate();
 </script>
     <h3>Information of JioHotstar Mod APK</h3>
-    <h4>App Name</h4><p>JioHotstar Mod APK</p>
+
+
+
+    <h3>Name
+
+JioHotstar Mod APK
+Google Play Link
+
+GET IT ON
+Google Play
+Developer
+
+STAR INDIA PRIVATE LIMITED
+Category
+
+Entertainment
+Last version
+25.01.27.1
+Updated
+
+February 17, 2025
+Compatible with
+
+Android 8.0+</h3>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9830717699605800"
      crossorigin="anonymous"></script>
 <ins class="adsbygoogle"
