--- a/jio-hotstar.html
+++ b/jio-hotstar.html
@@ -192,7 +192,7 @@
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
-    <a href="https://drive.google.com/file/d/10jzmQJuKyP9oh8bCkm4OLXzAb18BaEBy/view" class="download-btn">Download Now</a>
+    <a href="https://dl.modded-1.com/v2/download/1C_omiVUVTo2s6GrJjG91Gz1RnNY8FDv9" class="download-btn">Download Now</a>
     <footer style="text-align: center; padding: 1rem; color: var(--light);">
     <p>&copy; 2025 ModVerse. All rights reserved.</p>
     </footer>
