--- a/jio-hotstar.html
+++ b/jio-hotstar.html
@@ -192,7 +192,7 @@
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
-    <a href="https://dl.modded-1.com/v2/download/1C_omiVUVTo2s6GrJjG91Gz1RnNY8FDv9" class="download-btn">Download Now</a>
+    <a href="https://download1510.mediafire.com/xkimgpxgv4ogi1B0kaqfIhBmspNlbtCvJWjwA0s6FXvHaqQWpSO9j1dVnH2F8Imnul0ORFVc3FBzM4oy1B6htRfA5CzVfxy3TQq-4os2VzTf5_2yUbZbmc3fHrqsuD_1tHykGImNaVhh-wTP78zngajHiCq-Ubfog0nVfJ9nB5mK/9iha3sl6mqpjzk5/in.startv.hotstar_25.01.27.1-3747_2arch_1dpi_28lang_62be1c380441134b8d6f406e96a62c48_apkmirror.com.apkm" class="download-btn">Download Now</a>
     <footer style="text-align: center; padding: 1rem; color: var(--light);">
     <p>&copy; 2025 ModVerse. All rights reserved.</p>
     </footer>
