--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
 </style>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9830717699605800"
      crossorigin="anonymous"></script>
+    <script type='text/javascript' src='//pl25969481.effectiveratecpm.com/3c/e0/12/3ce01243b7cc547a015fb10c2efd0722.js'></script>
 </head>
 <body>
     <header class="header">
