--- a/index.html
+++ b/index.html
@@ -199,6 +199,8 @@
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
+    <script async="async" data-cfasync="false" src="//pl25969490.effectiveratecpm.com/2d6a3a9390a58c127648c33850a45bb0/invoke.js"></script>
+<div id="container-2d6a3a9390a58c127648c33850a45bb0"></div>
     <a href="https://www.modverse.online/testad.html"><button class="download-btn">Ads test button</button></a>
     <footer style="text-align: center; padding: 1rem; color: var(--light);">
     <p>&copy; 2025 ModVerse. All rights reserved.</p>
