--- a/jio-hotstar.html
+++ b/jio-hotstar.html
@@ -169,6 +169,8 @@
     </div>
     
 
+    <script async="async" data-cfasync="false" src="//pl25969490.effectiveratecpm.com/2d6a3a9390a58c127648c33850a45bb0/invoke.js"></script>
+<div id="container-2d6a3a9390a58c127648c33850a45bb0"></div>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9830717699605800"
      crossorigin="anonymous"></script>
 <ins class="adsbygoogle"
