--- a/testad.html
+++ b/testad.html
@@ -7,56 +7,7 @@
 </head>
 <body>
 
-    <!-- Google AdSense Ad -->
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9830717699605800"
-        crossorigin="anonymous"></script>
-
-    <ins class="adsbygoogle"
-        style="display:block"
-        data-ad-client="ca-pub-9830717699605800"
-        data-ad-slot="1645395796"
-        data-ad-format="auto"
-        data-full-width-responsive="true"></ins>
-
-    <script>
-        (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9830717699605800"
-     crossorigin="anonymous"></script>
-<!-- Horizontal -->
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-9830717699605800"
-     data-ad-slot="1645395796"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9830717699605800"
-     crossorigin="anonymous"></script>
-<!-- Horizontal -->
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-9830717699605800"
-     data-ad-slot="1645395796"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9830717699605800"
-     crossorigin="anonymous"></script>
-<!-- Horizontal -->
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-9830717699605800"
-     data-ad-slot="1645395796"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+    <script type='text/javascript' src='//pl25969623.effectiveratecpm.com/cf/6d/d0/cf6dd0d4919721710e6c53149944add6.js'></script>
 
 </body>
 </html>
