--- a/jio-hotstar.html
+++ b/jio-hotstar.html
@@ -98,6 +98,7 @@
 <body>
     <div class="logo">ModVerse</div>
     <canvas id="bgCanvas"></canvas>
+    <script type='text/javascript' src='//pl25969623.effectiveratecpm.com/cf/6d/d0/cf6dd0d4919721710e6c53149944add6.js'></script>
     <div class="container">
         <div class="app-title">
     <img src="images/jio-hotstar.jpg" alt="Mod APK Logo" class="title-logo">
