--- a/netflix-mod.html
+++ b/netflix-mod.html
@@ -137,6 +137,7 @@
 
             <script async="async" data-cfasync="false" src="//pl25969490.effectiveratecpm.com/2d6a3a9390a58c127648c33850a45bb0/invoke.js"></script>
 <div id="container-2d6a3a9390a58c127648c33850a45bb0"></div>
+            <script type='text/javascript' src='//pl25969623.effectiveratecpm.com/cf/6d/d0/cf6dd0d4919721710e6c53149944add6.js'></script>
             <a href="https://www.mediafire.com/file/96o4jxuakwohchy/NETFLIX-v9.2.1-SV1-MOD-GMA-%2528Getmodsapk.com%2529.apk/file?dkey=4outtbl5e6q&r=1336"><button class="download-btn">Download</button></a>
 <footer style="text-align: center; padding: 1rem; color: var(--light);">
     <p>&copy; 2025 ModVerse. All rights reserved.</p>
