--- a/netflix-mod.html
+++ b/netflix-mod.html
@@ -140,6 +140,16 @@
             <script type='text/javascript' src='//pl25969623.effectiveratecpm.com/cf/6d/d0/cf6dd0d4919721710e6c53149944add6.js'></script>
             <a href="https://www.mediafire.com/file/96o4jxuakwohchy/NETFLIX-v9.2.1-SV1-MOD-GMA-%2528Getmodsapk.com%2529.apk/file?dkey=4outtbl5e6q&r=1336"><button class="download-btn">Download</button></a>
 <footer style="text-align: center; padding: 1rem; color: var(--light);">
+    <script type="text/javascript">
+	atOptions = {
+		'key' : 'e9de195123db828b4d0007de0e0a8b83',
+		'format' : 'iframe',
+		'height' : 300,
+		'width' : 160,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/e9de195123db828b4d0007de0e0a8b83/invoke.js"></script>
     <p>&copy; 2025 ModVerse. All rights reserved.</p>
     </footer>
 </body>
