--- a/netflix-mod.html
+++ b/netflix-mod.html
@@ -129,9 +129,9 @@
         <strong>Compatible with:</strong> Android 4.3+
     </div>
 
-
-            
-            <a href="https://www.mediafire.com/file/96o4jxuakwohchy/NETFLIX-v9.2.1-SV1-MOD-GMA-%2528Getmodsapk.com%2529.apk/file?dkey=4outtbl5e6q&r=1336"><button class="download-btn">Download</button></a>
+ <script async="async" data-cfasync="false" src="//pl25969490.effectiveratecpm.com/2d6a3a9390a58c127648c33850a45bb0/invoke.js"></script>
+<div id="container-2d6a3a9390a58c127648c33850a45bb0"></div>           
+<a href="https://www.mediafire.com/file/96o4jxuakwohchy/NETFLIX-v9.2.1-SV1-MOD-GMA-%2528Getmodsapk.com%2529.apk/file?dkey=4outtbl5e6q&r=1336"><button class="download-btn">Download</button></a>
 <footer style="text-align: center; padding: 1rem; color: var(--light);">
     <p>&copy; 2025 ModVerse. All rights reserved.</p>
     </footer>
