--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
     <div class="app-card" data-name="Photo Editor Mod">
         <h3>Photo Editor Mod</h3>
         <p>All Pro Features Unlocked</p>
-        <a href="#"><button class="download-btn">Download</button></a>
+        <a href="test.html"><button class="download-btn">Download</button></a>
     </div>
 
         <script type="text/javascript">
