--- a/test.html
+++ b/test.html
@@ -175,8 +175,16 @@
 		'params' : {}
 	};
 </script>
-<script type="text/javascript" src="//chamberssnorted.com/137255f794facf314a69fc066c31db88/invoke.js"></script>
-
+<script type="text/javascript">
+	atOptions = {
+		'key' : 'e9de195123db828b4d0007de0e0a8b83',
+		'format' : 'iframe',
+		'height' : 300,
+		'width' : 160,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//chamberssnorted.com/e9de195123db828b4d0007de0e0a8b83/invoke.js"></script>
     <a href="https://drive.google.com/file/d/10jzmQJuKyP9oh8bCkm4OLXzAb18BaEBy/view" class="download-btn">Download Now</a>
     <footer style="text-align: center; padding: 1rem; color: var(--light);">
     <p>&copy; 2025 ModVerse. All rights reserved.</p>
