--- a/test.html
+++ b/test.html
@@ -184,7 +184,10 @@
 		'params' : {}
 	};
 </script>
-<script type="text/javascript" src="//chamberssnorted.com/e9de195123db828b4d0007de0e0a8b83/invoke.js"></script>
+
+<script async="async" data-cfasync="false" src="//chamberssnorted.com/2d6a3a9390a58c127648c33850a45bb0/invoke.js"></script>
+<div id="container-2d6a3a9390a58c127648c33850a45bb0"></div>
+	
     <a href="https://drive.google.com/file/d/10jzmQJuKyP9oh8bCkm4OLXzAb18BaEBy/view" class="download-btn">Download Now</a>
     <footer style="text-align: center; padding: 1rem; color: var(--light);">
     <p>&copy; 2025 ModVerse. All rights reserved.</p>
