--- a/netflix-mod.html
+++ b/netflix-mod.html
@@ -4,7 +4,16 @@
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Static Background</title>
+    <title>Netflix Premium</title>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-9H2Z782PSL"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-9H2Z782PSL');
+</script>
     <style>
         :root {
             --primary: #6c5ce7;
