--- a/netflix-mod.html
+++ b/netflix-mod.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Netflix Premium</title>
-    <!-- Google tag (gtag.js) -->
+    <!-- Google tag (gtag.js) --->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-9H2Z782PSL"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
