--- a/index.html
+++ b/index.html
@@ -261,6 +261,7 @@
     <a href="https://www.modverse.online/testad.html"><button class="download-btn">Ads test button</button></a>
     <footer style="text-align: center; padding: 1rem; color: var(--light);">
     <p>&copy; 2025 ModVerse. All rights reserved.</p>
+	    <a href="https://www.sigmatraffic.com/blog/10-tips-to-reduce-website-bounce-rate-what-s-the-average-bounce-rate?ref=306388">Reduce bounce rates</a>
     </footer>
 </body>
 </html>
