--- a/testad.html
+++ b/testad.html
@@ -7,7 +7,8 @@
 </head>
 <body>
 
-    <script type='text/javascript' src='//pl25969623.effectiveratecpm.com/cf/6d/d0/cf6dd0d4919721710e6c53149944add6.js'></script>
+    ---<sscript type='text/javascript' src='//pl25969623.effectiveratecpm.com/cf/6d/d0/cf6dd0d4919721710e6c53149944add6.js'></script>
 
+ <script type='text/javascript' src='//chamberssnorted.com/cf/6d/d0/cf6dd0d4919721710e6c53149944add6.js'></script>       
 </body>
 </html>
