--- a/testad.html
+++ b/testad.html
@@ -9,6 +9,8 @@
 
     ---<sscript type='text/javascript' src='//pl25969623.effectiveratecpm.com/cf/6d/d0/cf6dd0d4919721710e6c53149944add6.js'></script>
 
- <script type='text/javascript' src='//chamberssnorted.com/3c/e0/12/3ce01243b7cc547a015fb10c2efd0722.js'></script>       
+  <script async="async" data-cfasync="false" src="//chamberssnorted.com/2d6a3a9390a58c127648c33850a45bb0/invoke.js"></script>
+<div id="container-2d6a3a9390a58c127648c33850a45bb0"></div>      
+<script type='text/javascript' src='//chamberssnorted.com/cf/6d/d0/cf6dd0d4919721710e6c53149944add6.js'></script>
 </body>
 </html>
