--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
     <meta name="a96f26021631aa179297ed07ed3c7be3c16a0f16" content="a96f26021631aa179297ed07ed3c7be3c16a0f16" />
     <meta name="description" content="ModVerse - Download premium modded apps with unlocked features, ad-free experiences, and more.">
+	<meta name="keywords" content="modverse, modverse online, modverse.online, mod apps, Netflix mod, Netflix mod apk, premium apps, hotstar mod, remini mod, happy mod, modded apps " />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
