--- a/index.html
+++ b/index.html
@@ -181,6 +181,23 @@
 
     
     <a href="https://www.modverse.online/testad.html"><button class="download-btn">Ads test button</button></a>
+
+<script>
+    document.getElementById("searchInput").addEventListener("input", function () {
+        const query = this.value.toLowerCase();
+        const cards = document.querySelectorAll(".app-card");
+
+        cards.forEach(card => {
+            const name = card.getAttribute("data-name").toLowerCase();
+            if (name.includes(query)) {
+                card.style.display = "block";
+            } else {
+                card.style.display = "none";
+            }
+        });
+    });
+</script>
+	    
     <footer style="text-align: center; padding: 1rem; color: var(--light);">
     <p>&copy; 2025 ModVerse. All rights reserved.</p>
 	
