--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         <p>Unlocked Premium Features</p>
         <a href="jio-hotstar.html"><button class="download-btn">Download</button></a>
     </div>
-        
+    </section>
 
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
