--- a/index.html
+++ b/index.html
@@ -126,8 +126,13 @@
 </head>
 <body>
     <header class="header">
-        <div class="logo">ModVerse</div>
-        <input type="text" class="search-box" placeholder="Search apps..." id="searchInput">
+    <div class="logo">ModVerse</div>
+    <nav class="navbar">
+        <a href="#home">Home</a>
+        <a href="#apps">Apps</a>
+        <a href="#contact">Contact</a>
+    </nav>
+    <input type="text" class="search-box" placeholder="Search apps..." id="searchInput">
     </header>
     
     <canvas id="bgCanvas"></canvas>
