--- a/index.html
+++ b/index.html
@@ -126,13 +126,14 @@
 </head>
 <body>
     <header class="header">
+    <div class="menu-icon" onclick="toggleMenu()">&#9776;</div>
     <div class="logo">ModVerse</div>
-    <nav class="navbar">
+    <input type="text" class="search-box" placeholder="Search apps..." id="searchInput">
+    <nav id="sideMenu" class="side-menu">
         <a href="#home">Home</a>
         <a href="#apps">Apps</a>
         <a href="#contact">Contact</a>
     </nav>
-    <input type="text" class="search-box" placeholder="Search apps..." id="searchInput">
     </header>
     
     <canvas id="bgCanvas"></canvas>
