--- a/index.html
+++ b/index.html
@@ -130,6 +130,10 @@
     <div class="logo">ModVerse</div>
     <input type="text" class="search-box" placeholder="Search apps..." id="searchInput">
     <nav id="sideMenu" class="side-menu">
+  <a href="#home">Home</a>
+  <a href="#apps">Apps</a>
+  <a href="mailto:support@modverse.online">Contact</a>
+  <a href="/">Visit Main Site</a>
     </nav>
     </header>
     
