--- a/index.html
+++ b/index.html
@@ -126,14 +126,18 @@
 </head>
 <body>
     <header class="header">
-    <div class="menu-icon" onclick="toggleMenu()">&#9776;</div>
-
-<nav id="sideMenu" class="side-menu">
-  <a href="#home">Home</a>
-  <a href="#apps">Apps</a>
-  <a href="mailto:support@modverse.online">Contact</a>
-  <a href="/">Visit Main Site</a>
-</nav>
+  <div class="top-bar">
+    <div class="menu-icon" onclick="toggleMenu()">☰</div>
+    <h1 class="logo">ModVerse</h1>
+    <input type="text" class="search-bar" placeholder="Search apps...">
+  </div>
+  <nav id="navMenu" class="side-nav">
+    <a href="#">Home</a>
+    <a href="#">Apps</a>
+    <a href="#">Contact</a>
+    <a href="#">Visit</a>
+    <a href="#">Main Site</a>
+  </nav>
     </header>
     
     <canvas id="bgCanvas"></canvas>
