--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
   <div class="top-bar">
     <div class="menu-icon" onclick="toggleMenu()">☰</div>
     <h1 class="logo">ModVerse</h1>
-    <input type="text" class="search-bar" placeholder="Search apps...">
+    <input type="text" id="searchInput" placeholder="Search apps..." class="search-bar" />
   </div>
   <nav id="navMenu" class="side-nav">
     <a href="#">Home</a>
