--- a/index.html
+++ b/index.html
@@ -138,6 +138,44 @@
     <li><a href="#contact">Contact</a></li>
   </ul>
 </nav>
+	<style>
+  .side-menu {
+    position: fixed;
+    top: 0;
+    left: -250px; /* hidden */
+    width: 250px;
+    height: 100%;
+    background-color: #111;
+    padding-top: 60px;
+    transition: left 0.3s ease;
+    z-index: 999;
+  }
+
+  .side-menu.open {
+    left: 0;
+  }
+
+  .side-menu ul {
+    list-style: none;
+    padding: 0;
+  }
+
+  .side-menu li {
+    padding: 15px 20px;
+  }
+
+  .side-menu li a {
+    color: white;
+    text-decoration: none;
+    display: block;
+  }
+
+  .menu-icon {
+    font-size: 28px;
+    cursor: pointer;
+    color: var(--light);
+  }
+	</style>
     
     <canvas id="bgCanvas"></canvas>
     <section class="hero" id="home">
