--- a/index.html
+++ b/index.html
@@ -176,6 +176,12 @@
     color: var(--light);
   }
 	</style>
+	<script>
+  function toggleMenu() {
+    const sideMenu = document.getElementById('sideMenu');
+    sideMenu.classList.toggle('open');
+  }
+	</script>
     
     <canvas id="bgCanvas"></canvas>
     <section class="hero" id="home">
