--- a/index.html
+++ b/index.html
@@ -188,7 +188,8 @@
     <ul>
       <li><a href="#home">Home</a></li>
       <li><a href="#apps">Apps</a></li>
-      <li><a href="#contact">Contact</a></li>
+      <li><a href="contact.html">Contact</a></li>
+      <li><a href="https://tempmail.modverse.online/">Tempmail</a></li>
     </ul>
   </nav>
 
