--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
   <header class="header">
     <div class="menu-icon" onclick="toggleMenu()">&#9776;</div>
     <div class="logo">ModVerse</div>
-    <input type="text" class="search-box" placeholder="Search apps..." id="searchInput">
+    <input type="text" class="search-box" placeholder="Search..." id="searchInput">
   </header>
 
   <nav id="sideMenu" class="side-menu">
