--- a/contact.html
+++ b/contact.html
@@ -249,6 +249,14 @@
     animate();
   </script>
 
+   <!-- Menu toggle -->
+  <script>
+    function toggleMenu() {
+      document.getElementById("sideMenu").classList.toggle("open");
+    }
+  </script>
+  
+
   <script>
     // Search placeholder functionality
     document.getElementById("searchInput").addEventListener("input", function () {
