--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
       <li><a href="#home">Home</a></li>
       <li><a href="#apps">Apps</a></li>
       <li><a href="contact.html">Contact</a></li>
-      <li><a href="contact.html">privacy</a></li>
+      <li><a href="privacy.html">privacy</a></li>
       <li><a href="https://tempmail.modverse.online/">Tempmail</a></li>
     </ul>
 </nav>
