--- a/index.html
+++ b/index.html
@@ -166,10 +166,10 @@
 <nav id="sideMenu" class="side-menu">
     <ul>
       <li><a href="#home">Home</a></li>
-      <li><a href="#apps">Apps</a></li>
       <li><a href="contact.html">Contact</a></li>
-      <li><a href="privacy.html">privacy</a></li>
+      <li><a href="privacy.html">Privacy Policy</a></li>
       <li><a href="https://tempmail.modverse.online/">Tempmail</a></li>
+      <li><a href="service.html">Our Services</a></li>
     </ul>
 </nav>
   
